# mcp-crawl4ai-rag

./: .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  test_packaging_local.sh
.github/workflows/: build-test.yml  deploy-pypi.yml
src/crawl4ai_mcp/: __init__.py  crawl4ai_mcp.py  embeddings.py  transformers.py  utils.py
src/crawl4ai_mcp/storage/: supabase.py
src/crawl4ai_mcp/tools/: __init__.py  crawl_single_page.py  get_available_sources.py  perform_rag_query.py  search_code_examples.py  smart_crawl_url.py
src/crawl4ai_mcp/tools/crawlers/: crawl_single_page.py  smart_crawl_url.py  utils.py
tests/: test_packaging.py
