[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawl4ai-mcp"
version = "0.1.0"
description = "MCP server for integrating web crawling and RAG into AI agents and AI coding assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai==0.6.2",
    "mcp==1.7.1",
    "supabase==2.15.1",
    "openai==1.71.0",
    "dotenv==0.9.9",
    "sentence-transformers>=4.1.0",
]

[project.scripts]
mcp-crawl4ai-rag = "crawl4ai_mcp:main"

[tool.setuptools]
packages = ["crawl4ai_mcp"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
crawl4ai_mcp = ["*.py"]
